# Pyonize

./: LICENSE  README.md  changelog.md  example.py  pyproject.toml  setup.py
pyon/: __init__.py  main.py
pyonize/: __init__.py  __main__.py
scripts/: publish.sh
test/: test_main.py
