[tool.poetry]
name = "pyonize"
version = "0.1.3"
description = "convert json|dict to python object"
readme = "README.md"
homepage = "https://github.com/BilalAlpaslan/Pyonize"
authors = ["Bilal Alpaslan <m.bilal.alpaslan@gmail.com>"]
license = "LICENSE"
packages = [{include = "pyonize"}]

[tool.poetry.dependencies]
python = ">=3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"